2008-12-09  Chong Yidong  <cyd@stupidchicken.com>

	* xftfont.c (syms_of_xftfont): Fix typo.

	* buffer.c (Fbuffer_swap_text): Signal error if swapping a dead buffer.

2008-12-08  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacs.c (main): Close daemon_pipe on exec.

2008-12-08  Chong Yidong  <cyd@stupidchicken.com>

	* termchar.h (struct tty): New members termcap_term_buffer and
	termcap_strings_buffer.

	* term.c (encode_terminal_code): Free any previous memory blocks
	before calling xmalloc for encode_terminal_src or encode_terminal_dst.
	(maybe_fatal): Buffer argument deleted.  Don't free buffer here.
	All callers changed.
	(init_tty): Store termcap data and string buffers in new struct
	tty members termcap_term_buffer and termcap_strings_buffer.
	(delete_tty): Free them.
	(syms_of_term): Initialize encode_terminal_src and encode_terminal_dst.

2008-12-07  Seiji Zenitani  <zenitani@mac.com>

	* nsfns.m (ns_set_background_color): Remove code duplication.
	It was a substitute for face-transparency on OS X 10.3.

2008-12-06  Chong Yidong  <cyd@stupidchicken.com>

	* coding.c (make_conversion_work_buffer): Disable buffer
	modification hooks in the work buffer.

2008-12-05  Eli Zaretskii  <eliz@gnu.org>

	* process.c (procfs_system_process_attributes): If `nread' has a
	negative value, assign zero to it.

2008-12-05  Chong Yidong  <cyd@stupidchicken.com>

	* eval.c (Vdebug_on_error): Doc fix.

2008-12-05  Kenichi Handa  <handa@m17n.org>

	* ftfont.c (ftfont_shape_by_flt): Use "combining" flt if the
	second character is a combining character.

2008-12-05  Eli Zaretskii  <eliz@gnu.org>

	* process.c (procfs_system_process_attributes): Don't use cmd,
	cmdsize, and q without initializing them first.

2008-12-04  Jason Rumney  <jasonr@gnu.org>

	* w32font.c (w32font_draw): Initialize orig_clip before getting
	it, and delete it when finished.

2008-12-04  Dan Nicolaescu  <dann@ics.uci.edu>

	* keyboard.c (kbd_buffer_get_event): Follow the non-interactive